--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 # Entry to fry for dotfiles assignment
 Host fry
-        fry.cs.wright.edu
+        HostName fry.cs.wright.edu
 
 # Old config entry from ceg2350
 Host aws-ams
