git configurations and links working, added to install file

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,4 +6,4 @@
 [help]
 	  autocorrect = 3
 [include]
-	  path = ~/dotfiles/.gitmessage.txt
+	  path = ~/instance2410/dotfiles/dotfiles/.gitmessage.txt
