--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 # Entry to fry for dotfiles assignment
 
-# Host fry
-#        HostName fry.cs.wright.edu
-#       User w1082axs
-#	Port 22
+Host fry
+	HostName fry.cs.wright.edu
+	User w1082axs
+	Port 22
         
